<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_diary_book"
        android:enabled="true"
        android:icon="@drawable/spiral_bound_booklet_100px"
        android:title="@string/bottom_navigation_label1" />
    <item
        android:id="@+id/page_statistic"
        android:enabled="true"
        android:icon="@drawable/statistics_60px"
        android:title="@string/bottom_navigation_label2" />
    <item
        android:id="@+id/page_square"
        android:enabled="true"
        android:icon="@drawable/high_five"
        android:title="分享廣場" />
    <item
        android:id="@+id/page_chat_list"
        android:enabled="true"
        android:icon="@drawable/chat_52px"
        android:title="聊天室列表" />
    <item
        android:id="@+id/page_more"
        android:enabled="true"
        android:icon="@drawable/more_100px"
        android:title="@string/bottom_navigation_label4" />

</menu>