<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAddDiaryMood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDFE1"
    tools:context=".AddDiaryMoodActivity">

    <TextView
        android:id="@+id/tvAddDiaryMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_add_diary_mood"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDiaryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D0104C"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tvAddDiaryMood" />

    <Button
        android:id="@+id/btnDiaryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#D0104C"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiaryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDiaryDate"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMood"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDiaryDate"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/fabToEditMood"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="@drawable/ripple_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/edit_52px" />

    <TextView
        android:id="@+id/tvEditMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_mood"
        app:layout_constraintEnd_toEndOf="@+id/fabToEditMood"
        app:layout_constraintStart_toStartOf="@+id/fabToEditMood"
        app:layout_constraintTop_toBottomOf="@+id/fabToEditMood" />

    <ImageView
        android:id="@+id/fabToAct"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="@drawable/ripple_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/circled_right_52px" />

    <TextView
        android:id="@+id/tvNextToAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_to_add_activity"
        app:layout_constraintEnd_toEndOf="@+id/fabToAct"
        app:layout_constraintStart_toStartOf="@+id/fabToAct"
        app:layout_constraintTop_toBottomOf="@+id/fabToAct" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiaryDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDiaryDate"
        app:srcCompat="@drawable/calendar_96px" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDiaryTime"
        app:layout_constraintEnd_toStartOf="@+id/btnDiaryTime"
        app:layout_constraintTop_toTopOf="@+id/btnDiaryTime"
        app:srcCompat="@drawable/clock_200px" />

</androidx.constraintlayout.widget.ConstraintLayout>